--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Солнечная система</h1>
     <ul>
-        <li><a href="/solar.html">Solar</a></li>
-        <li><a href="/mars.html">Mars</a></li>
-        <li><a href="/earth.html">Earth</a></li>
+        <li><a href="#solar.html">Solar</a></li>
+        <li><a href="#mars.html">Mars</a></li>
+        <li><a href="#earth.html">Earth</a></li>
     </ul>
 </body>
 </html>
