--- a/earth.html
+++ b/earth.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Earth</title>
+    <link rel="stylesheet" 
+    <header>
+        <nav>
+            <ul>
+                <li><a href="">Солнце</a></li>
+                <li><a href="">Земля</a></li>
+                <li><a href="">Марс</a></li>
+            </ul>
+        </nav>
+    </header>href="./style.css">
 </head>
 <body>
     <h1>Планета "Земля"</h1>
