--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar System</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./solar.html">Солнце</a></li>
+                <li><a href="./earth.html">Земля</a></li>
+                <li><a href="./mars.html">Марс</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Солнечная система</h1>
-    <ul>
-        <li><a href="./solar.html">Solar</a></li>
-        <li><a href="./mars.html">Mars</a></li>
-        <li><a href="./earth.html">Earth</a></li>
-    </ul>
+    
 </body>
 </html>
