--- a/solar.html
+++ b/solar.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./solar.html">Солнце</a></li>
+                <li><a href="./earth.html">Земля</a></li>
+                <li><a href="./mars.html">Марс</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Звезда "Солнце"</h1>
     <!-- <img width="100" src="https://cdn-icons-png.flaticon.com/512/4287/4287555.png"> -->
-    <p><b>Марс</b> — <i>четвёртая</i> по удалённости от Солнца и <i>седьмая</i> по размеру планета Солнечной системы</p>
+    <p>Солнце - это звезда, находяшаяся в центре солнечной системе</p>
 </body>
 </html> 
