add hearder nav

--- a/earth.html
+++ b/earth.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="">Солнце</a></li>
-                <li><a href="">Земля</a></li>
-                <li><a href="">Марс</a></li>
+                <li><a href="./solar.html">Солнце</a></li>
+                <li><a href="./earth.html">Земля</a></li>
+                <li><a href="./mars.html">Марс</a></li>
             </ul>
         </nav>
     </header>
