--- a/solar.html
+++ b/solar.html
@@ -18,6 +18,6 @@
     </header>
     <h1>Звезда "Солнце"</h1>
     <!-- <img width="100" src="https://cdn-icons-png.flaticon.com/512/4287/4287555.png"> -->
-    <p>Солнце - это звезда, находяшаяся в центре солнечной системе</p>
+    <p><b>Солнце</b> — одна из звёзд нашей Галактики и единственная звезда Солнечной системы. Вокруг Солнца обращаются другие объекты этой системы: планеты и их спутники, карликовые планеты и их спутники, астероиды, метеороиды, кометы и космическая пыль</p>
 </body>
 </html> 
