--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar System</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>SolarSystem</title>
+    <link rel="icon" type="image/png" href="./src/moon-phase.png">
+    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/main.css">
+    <link rel="stylesheet" href="./style/footer.css">
+    <link rel="stylesheet" href="./style/index.css">
+
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="./solar.html">Солнце</a></li>
-                <li><a href="./earth.html">Земля</a></li>
-                <li><a href="./mars.html">Марс</a></li>
+                <li><a href="">Планеты</a></li>
+                <li><a href="">Звезды</a></li>
+                <li><a href="">Спутники</a></li>
+                <li class="logo"><a href="index.html">SolarSystem</a></li>
             </ul>
         </nav>
     </header>
-    <h1>Солнечная система</h1>
-    
+    <main>
+        <div class="index_menu_planet">
+            <a href="./star/solar.html"><img width="5%" src="./src/sun.png" alt=""></a>
+            <a href="./planet/mercury.html"><img width="5%" src="./src/mercury.png" alt=""></a>
+            <a href="./planet/venus.html"><img width="5%" src="./src/venus.png" alt=""></a>
+            <a href="./planet/earth.html"><img width="5%" src="./src/earth.png" alt=""></a>
+            <a href="./planet/mars.html"><img width="5%" src="./src/mars.png" alt=""></a>
+            <a href="./planet/jupiter.html"><img width="5%" src="./src/jupiter.png" alt=""></a>
+            <a href="./planet/saturn.html"><img width="5%" src="./src/saturn.png" alt=""></a>
+            <a href="./planet/uranus.html"><img width="5%" src="./src/uranus.png" alt=""></a>
+            <a href="./planet/neptune.html"><img width="5%" src="./src/neptune.png" alt=""></a>
+        </div>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
