--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/footer.css">
     <link rel="stylesheet" href="./style/index.css">
-
 </head>
 <body>
     <header>
@@ -24,15 +23,42 @@
     </header>
     <main>
         <div class="index_menu_planet">
-            <a href="./star/solar.html"><img width="5%" src="./src/sun.png" alt=""></a>
-            <a href="./planet/mercury.html"><img width="5%" src="./src/mercury.png" alt=""></a>
-            <a href="./planet/venus.html"><img width="5%" src="./src/venus.png" alt=""></a>
-            <a href="./planet/earth.html"><img width="5%" src="./src/earth.png" alt=""></a>
-            <a href="./planet/mars.html"><img width="5%" src="./src/mars.png" alt=""></a>
-            <a href="./planet/jupiter.html"><img width="5%" src="./src/jupiter.png" alt=""></a>
-            <a href="./planet/saturn.html"><img width="5%" src="./src/saturn.png" alt=""></a>
-            <a href="./planet/uranus.html"><img width="5%" src="./src/uranus.png" alt=""></a>
-            <a href="./planet/neptune.html"><img width="5%" src="./src/neptune.png" alt=""></a>
+            <div class="planet_card">
+                <a href="./star/solar.html"><img src="./src/sun.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/mercury.html"><img src="./src/mercury.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/venus.html"><img src="./src/venus.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/earth.html"><img src="./src/earth.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/mars.html"><img src="./src/mars.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/jupiter.html"><img src="./src/jupiter.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/saturn.html"><img src="./src/saturn.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/uranus.html"><img src="./src/uranus.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
+            <div class="planet_card">
+                <a href="./planet/neptune.html"><img src="./src/neptune.png" alt=""></a>
+                <p>cолнце</p>
+            </div>
         </div>
     </main>
     <footer>
