--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/footer.css">
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="stylesheet" href="./style/nav.css">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="">Планеты</a></li>
-                <li><a href="">Звезды</a></li>
-                <li><a href="">Спутники</a></li>
-                <li class="logo"><a href="index.html">SolarSystem</a></li>
-            </ul>
-        </nav>
+        <a href="index.html">SolarSystem</a>
+        <a href="">github</a>
     </header>
+    <nav>
+        <a href="">Планеты</a>
+        <a href="">Звезды</a>
+        <a href="">Спутники</a>
+    </ul>
+</nav>
     <main>
-        <div class="index_menu_planet">
+        <div id="index_menu_planet">
             <div class="planet_card">
                 <a href="./star/solar.html"><img src="./src/sun.png" alt=""></a>
                 <p>cолнце</p>
@@ -62,7 +63,7 @@
         </div>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
